codex-rs/tui/src/app/snapshots/codex_tui__app__fork_session_overlay__tests__fork_session_overlay_background_ignores_deferred_history_lines.snap
---
source: tui/src/app/fork_session_overlay.rs
expression: snapshot_buffer(&buf)
---
│ >_ OpenAI Codex (v0.0.0)                    │
│                                             │
│ model:     gpt-5.3-codex   /model to change │
│ directory: /tmp/project                     │
╰─────────────────────────────────────────────╯


› background session



› Ask Codex to do anything

  gpt-5.3-codex default · 100% left · /tmp/project
