codex-rs/tui/src/app/snapshots/codex_tui__app__fork_session_overlay__tests__fork_session_overlay_background_live_header.snap
---
source: tui/src/app/fork_session_overlay.rs
expression: snapshot_buffer(&buf)
---
╭─────────────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)                    │
│                                             │
│ model:     gpt-5.3-codex   /model to change │
│ directory: ~/code/codex/codex-rs/tui        │
╰─────────────────────────────────────────────╯


› Ask Codex to do anything

  ? for shortcuts                                                                100% context left
