codex-rs/tui/src/app/snapshots/codex_tui__app__fork_session_overlay__tests__fork_session_overlay_multiple_popups.snap
---
source: tui/src/app/fork_session_overlay.rs
expression: snapshot_buffer(&buf)
---
╭─────────────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)                    │
│                                             │
│ model:     gpt-5.3-codex   /model to change │
│ directory: ~/code/codex/codex-rs/tui        │
╰─────────────────────────────────────────────╯

              ╭ fork session running ctrl+] prefix───────────────╮
› background s│First fork session                                │
              │                                                  │
              │> /tmp/first                                      │
              │             ╭ fork session running ctrl+] prefix───────────────╮
› Ask Codex to│             │Second fork session                               │
              │             │                                                  │
  ? for shortc│             │> /tmp/second                                     │ 100% context left
              │             │                                                  │
              │             │                                                  │
              │             │                                                  │
              ╰─────────────│                                                  │
                            │                                                  │
                            │                                                  │
                            │                                                  │
                            ╰──────────────────────────────────────────────────╯
