codex-rs/tui/src/app/snapshots/codex_tui__app__fork_session_overlay__tests__fork_session_overlay_popup_background_focus.snap
---
source: tui/src/app/fork_session_overlay.rs
expression: snapshot_buffer(&buf)
---
╭─────────────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)                    │
│                                             │
│ model:     gpt-5.3-codex   /model to change │
│ directory: ~/code/codex/codex-rs/tui        │
╰─────────────────────────────────────────────╯
                  ╭ fork session   running  background focus  ctrl+] prefix──────╮
                  │Independent Codex session                                     │
› background sessi│                                                              │
                  │> /tmp/worktree                                               │
                  │                                                              │
                  │ready for a fresh turn                                        │
› Ask Codex to do │                                                              │
                  │                                                              │
  ? for shortcuts │                                                              │00% context left
                  │                                                              │
                  │                                                              │
                  │                                                              │
                  │                                                              │
                  │                                                              │
                  ╰──────────────────────────────────────────────────────────────╯
